# Simplex

./: .gitignore  Cargo.toml  README.md  edt3.lp  graph75_300.lp  mcdo.lp  program.lp  warehouse100.lp
src/: lexer.pest  main.rs  simplexef64.rs
